Update README with comprehensive documentation
- Added table of contents for better navigation
- Enhanced architecture and design sections
- Added detailed testing and CI/CD documentation
- Improved self-hosted runner setup instructions